--- a/render.yaml
+++ b/render.yaml
@@ -4,6 +4,7 @@ services:
     env: docker
     plan: free
     dockerfilePath: ./backend/Dockerfile
+    buildContext: ./backend
     autoDeploy: true
     envVars:
       - key: PORT
@@ -14,6 +15,7 @@ services:
     env: docker
     plan: free
     dockerfilePath: ./frontend/Dockerfile
+    buildContext: ./frontend
     autoDeploy: true
     envVars:
       - key: REACT_APP_API_URL
