--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: docker
     plan: free
     dockerfilePath: ./backend/Dockerfile
-    buildContext: ./backend
+    dockerContext: ./backend
     autoDeploy: true
     envVars:
       - key: PORT
@@ -15,7 +15,7 @@ services:
     env: docker
     plan: free
     dockerfilePath: ./frontend/Dockerfile
-    buildContext: ./frontend
+    dockerContext: ./frontend
     autoDeploy: true
     envVars:
       - key: REACT_APP_API_URL
